tests/baselines/reference/parserForInStatement2.errors.txt
==== tests/cases/conformance/parser/ecmascript5/Statements/parserForInStatement2.ts (2 errors) ====
    for (var in X) {
             ~~
!!! error TS1123: Variable declaration list cannot be empty.
                ~
!!! error TS2304: Cannot find name 'X'.
    }